tests/sumo/errors/invalid_step_length/errors.sumo
Error: the minimum step-length is 0.001
Quitting (on error).
